Update of the links of the presentation page

--- a/index.html
+++ b/index.html
@@ -13,45 +13,45 @@
         
         <ul class="folder-list">
             <li>
-                <a href="./week1/index.html" class="folder-link">
+                <a href="L01-Workflow/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Week 1</span>
+                    <span class="folder-name">Lecture 1</span>
                 </a>
             </li>
             <li>
-                <a href="./week2/index.html" class="folder-link">
+                <a href="L02-semantic-html/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Week 2</span>
+                    <span class="folder-name">Lecture 2</span>
                 </a>
             </li>
             <li>
-                <a href="./week3/index.html" class="folder-link">
+                <a href="L02-semantic-html/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Week 3</span>
+                    <span class="folder-name">Lecture 3</span>
                 </a>
             </li>
             <li>
                 <a href="./week4/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Week 4</span>
+                    <span class="folder-name">Lecture 4</span>
                 </a>
             </li>
             <li>
                 <a href="./week5/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Week 5</span>
+                    <span class="folder-name">Lecture 5</span>
                 </a>
             </li>
             <li>
                 <a href="./week6/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Week 6</span>
+                    <span class="folder-name">Lecture 6</span>
                 </a>
             </li>
             <li>
                 <a href="./week7/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Week 7</span>
+                    <span class="folder-name">Lecture 7</span>
                 </a>
             </li>
         </ul>
