Updating links in presentation page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li>
-                <a href="L02-semantic-html/index.html" class="folder-link">
+                <a href="L03-css-basics/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
                     <span class="folder-name">Lecture 3</span>
                 </a>
