--- a/L04-responsive/index.html
+++ b/L04-responsive/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <a href="#main">Skip to content</a>
+  <a href="#main" id="skip">Skip to content</a>
+  <a href="#body" id="theme">Change theme</a>
 
   <header>
     <h1>Victor BOSSHARD</h1>
@@ -80,4 +81,5 @@
   </footer>
 
 </body>
+<script src="script.js"></script>
 </html>
