Renaming Folders of Repository Page

--- a/index.html
+++ b/index.html
@@ -15,43 +15,43 @@
             <li>
                 <a href="L01-Workflow/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Lecture 1</span>
+                    <span class="folder-name">L01 - Workflow</span>
                 </a>
             </li>
             <li>
                 <a href="L02-semantic-html/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Lecture 2</span>
+                    <span class="folder-name">L02 - Semantic HTML</span>
                 </a>
             </li>
             <li>
                 <a href="L03-css-basics/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Lecture 3</span>
+                    <span class="folder-name">L03 - CSS Basics</span>
                 </a>
             </li>
             <li>
-                <a href="./week4/index.html" class="folder-link">
+                <a href="./L04-responsive/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Lecture 4</span>
+                    <span class="folder-name">L04 - Responsive</span>
                 </a>
             </li>
             <li>
                 <a href="./week5/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Lecture 5</span>
+                    <span class="folder-name">L05</span>
                 </a>
             </li>
             <li>
                 <a href="./week6/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Lecture 6</span>
+                    <span class="folder-name">L06</span>
                 </a>
             </li>
             <li>
                 <a href="./week7/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
-                    <span class="folder-name">Lecture 7</span>
+                    <span class="folder-name">L07</span>
                 </a>
             </li>
         </ul>
