Updating folders link in first page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li>
-                <a href="./week5/index.html" class="folder-link">
+                <a href="./L05-DOM/index.html" class="folder-link">
                     <span class="folder-icon">📁</span>
                     <span class="folder-name">L05</span>
                 </a>
